tags/2013-08-29_cppreference/Archive/9d901bedcd3391d277ffb911f47280bf-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:9:1: error: 'Class' does not name a type
 Class ObjectEvent
 ^
main.cpp: In member function 'void GameObject::process_events()':
main.cpp:26:14: error: invalid use of incomplete type 'struct ObjectEvent'
         (*it)->process(this);
              ^
main.cpp:3:8: error: forward declaration of 'struct ObjectEvent'
 struct ObjectEvent;
        ^
